src/components/project.module.css
@import url('../animations.css');

.projectTitleContainer {
    padding: 0px;
    margin-top: -100px;
    margin-left: -20px;
    position:absolute;
    width: 100%;
    height: 100vh;
    box-sizing: border-box;
    padding: 20px;
    padding-top: 100px;
    overflow: hidden;
}
.projectTitleContainer h2 {
    box-sizing: border-box;
    position: absolute;
    top: 20;
    left: 30;
    z-index: 99999;
    margin-top: 200px;
    padding: 10px;
    padding-left: 20px;
    margin-left: -20px;
    font-size: 53px;
    background-color: #FFCA7B;
   
}
.projectTitleContainer img {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 0;
    width: 100%;
    height: 100vh;
    border-radius: 5px;
    border-radius: 0px;
    background-size: cover;
    object-fit: cover;
    background-position: center center;
}
.infoContainer {
    width:100%;
    height:180px ;
    display: flex;
    flex-wrap: nowrap;
}
.tecContainer {
    width: 30px;
    white-space: wrap;
    height: fit-content;
    margin: 0px;
    margin-top: 10px;
    text-align: right;
    
}
.tecContainer * {
    height: fit-content;
    padding: 0px;
    margin-right: 0px;
    margin-bottom: 25px;
}
.projectInfo li {
    box-sizing: border-box;
    padding-top: 15px;
    border-top:1px solid #FFFFFF ;
    margin-top: 15px;
    display: flex;
    flex-wrap: wrap;
}
.carousel {
    width: 100%;
    height: 250px;
    margin-top: 30px;
}
.carousel img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 5px;
}
.projectContainer {
    width: 100%;
}
.linkContainer {
    box-sizing: border-box;
    padding-left: 10%;
    padding-right: 10%;
    display: flex;
}
.projectInfo a {
    width: 100%;
    text-decoration: none;
    margin: auto;
    text-align: center;
    width: 200px;
    margin-top: 15px;
    font-size: 18px;
    font-family: 'Righteous', cursive;
    color: #FFCA7B;
}
.projectInfo li div {
    width: 100%;
}
.caracteristicImg {
    background-size: cover;
    object-fit: cover;
    background-size: contain;
    background-position: center center;
    margin-top: 15px;
    width: 100%;
    height: 200px;
    border-radius: 5px;
}
.modal {
    display: block;
    position: fixed;
    top: 20%;
    width: 90%;
    height: fit-content;
    max-height: 500px;
    background: transparent; 
}
.modal img {
    width: 100%;
    height: 100%;
    margin: auto;
    object-fit: contain;
    background-size: contain;
    background-position: center center;
}
.modal button {
    z-index: 1;
    position: relative;
    left: 92.5%;
    top:35px;
    background-color: transparent;
    border: none;
    outline: none;
}
@media (min-width: 768px) {
    
    .projectTitleContainer , .projectInfo  {
        margin: 0px;
        box-sizing: border-box;
        padding: 15%;
        padding-top: 200px;

    }
    .projectTitleContainer img {
        display: block;
        position: static;
        margin-top: 40px;
        width: 100%;
        height: 90%;
        object-fit: cover;
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
        
    }
    .projectTitleContainer h2 {
        margin: 0;
        position: static;
        width: 500px;
        font-size: 65px;
        background-color: transparent;
    }
    .projectTitleContainer h2:hover {
        transition: 0.2s;
        transform: scale(1.05) translate(12px);
        -webkit-background-clip: text;
        animation: textReflexOnWhite .3s  ease-in;
    }
    .infoContainer {
        margin-top: 20px;
        width: 90%;
    }
    .projectInfo {
        display: flex;
        flex-wrap: nowrap;
    }
    .linkContainer {
        width: 90%;
    }
    .carousel {
        width: 89%;
        height: 250px;
        margin-top: 30px;
    }
    .carousel img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
        border-radius: 5px;
    }
    .projectInfo ul {
        width: 70%;
    }
    .tecContainer {
        margin-left: 20px;
    }
}
@media screen and (max-width: 1360px) and (max-height: 720px) {
    .projectInfo {
        padding: 100px;
    }   
    .projectTitleContainer {
        padding: 100px;
        padding-top: 200px;
    }
}

